src/objects/Sprint_Project__c.object
<CustomObject>
    <description>Astrum IT Project Management Sprint Task</description>
    <fields>
        <fullName>Analyst_Priority__c</fullName>
        <description>Analyst Priority</description>
        <inlineHelpText>Analyst Priority</inlineHelpText>
        <label>Analyst Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Demand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Analyst Currently Assigned to Project</description>
        <inlineHelpText>Business Analyst Currently Assigned to Project</inlineHelpText>
        <label>Assigned Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sprint_Projects_Analyst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Designer Currently Assigned to Project</description>
        <inlineHelpText>Designer Currently Assigned to Project</inlineHelpText>
        <label>Assigned Designer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sprint_Projects_Designer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Software Developer Currently Assigned to Project</description>
        <inlineHelpText>Software Developer Currently Assigned to Project</inlineHelpText>
        <label>Assigned Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sprint_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Sprint Project Description</description>
        <inlineHelpText>Sprint Project Description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Designer_Priority__c</fullName>
        <description>Designer Priority</description>
        <inlineHelpText>Designer Priority</inlineHelpText>
        <label>Designer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Demand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Developer_Priority__c</fullName>
        <description>Developer Priority</description>
        <inlineHelpText>Developer Priority</inlineHelpText>
        <label>Developer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Demand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Sprint Project Name</description>
        <inlineHelpText>Sprint Project Name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Sprint Project Status</description>
        <inlineHelpText>Sprint Project Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Requested/Backlog</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Requirement Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Design Wireframe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Design Prototype</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Test/QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Ready to Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Deployed/Archive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Release_Date__c</fullName>
        <description>Projected Release Date (Sprint End Date)</description>
        <inlineHelpText>Projected Release Date (Sprint End Date)</inlineHelpText>
        <label>Target Release Date</label>
        <type>Date</type>
    </fields>
    <label>Sprint Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_Analyst__c</columns>
        <columns>Analyst_Priority__c</columns>
        <columns>Assigned_Designer__c</columns>
        <columns>Designer_Priority__c</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>Developer_Priority__c</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Sprint</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_Analyst__c</columns>
        <columns>Analyst_Priority__c</columns>
        <columns>Assigned_Designer__c</columns>
        <columns>Designer_Priority__c</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>Developer_Priority__c</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>0 - Requested/Backlog,9 - Deployed/Archive</value>
        </filters>
        <label>Current Sprint</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_Analyst__c</columns>
        <columns>Analyst_Priority__c</columns>
        <columns>Assigned_Designer__c</columns>
        <columns>Designer_Priority__c</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>Developer_Priority__c</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Project-{0000000000}</displayFormat>
        <label>Sprint Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>